--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <body>
         <head>
 
-           <input type="button" id='script' name="scriptbutton" value=" Run Script " onclick="exec('python MYSCRIPT.py');">
+           <input type="button" id='script' name="scriptbutton" value=" Run Script " onclick="exec('python app.py');">
 
         </head>
     </body>
