--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <head>
-
-           <input type="button" id='script' name="scriptbutton" value=" Run Script " onclick="exec('python app.py');">
-
-        </head>
-    </body>
-</html>
+<head>
+    <meta charset ="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <title>
+        Hello World
+    </title>
+</head>
+<body>
+    <h1>
+        Prueba
+    </h1>
+       <input type="button" id='script' name="scriptbutton" value=" Run Script " onclick="exec('python app.py');">
+</body>
