--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
     <title>
         Hello World
     </title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    Libreria de Bootsstap diseños bonitos-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+ 
+    
 </head>
 <body>
     <h1>
         Prueba
     </h1>
        <input type="button" id='script' name="scriptbutton" value=" Run Script " onclick="exec('python app.py');">
+       <button type="button" class="btn btn-outline-primary">Primary</button>
 </body>
