--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <h1>
         Prueba
     </h1>
-       <input type="button" id='script' name="scriptbutton" value=" Run Script " onclick="exec('python app.py');">
+       <input type="button" id='script' name="scriptbutton" value=" Run Script " onclick="exec('python test.py');">
        <button type="button" class="btn btn-outline-primary">Primary</button>
 </body>
